<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F5F5"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-2dp"
    tools:layout_editor_absoluteY="-4dp">

    <View
        android:id="@+id/container"
        android:layout_width="361dp"
        android:layout_height="427dp"
        android:background="@drawable/princ_container"
        app:layout_constraintBottom_toTopOf="@+id/act_reserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858" />

    <TextView
        android:id="@+id/txtCantidad"
        android:layout_width="98dp"
        android:layout_height="72dp"
        android:layout_marginStart="246dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/body_options"
        android:drawablePadding="2dp"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingTop="19dp"
        android:text="@string/number_box"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:drawableTopCompat="@drawable/ic_personas_reservation_black_2"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toTopOf="@+id/container" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/user"
        android:textColor="#BBBBBC"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/text_view3"
        android:textColor="#BBBBBC"
        app:layout_constraintEnd_toStartOf="@+id/txtUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <TextView
        android:id="@+id/txtCalendar"
        android:layout_width="98dp"
        android:layout_height="72dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="250dp"
        android:background="@drawable/body_options"
        android:drawablePadding="2dp"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingTop="18dp"
        android:text="@string/calen_box"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:drawableTopCompat="@drawable/ic_calendario_reservation_black_2"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toTopOf="@+id/container" />

    <EditText
        android:id="@+id/editDetails"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:backgroundTint="#d4d5d6"
        android:drawableEnd="@drawable/ic_pencil_black"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:gravity="start|top"
        android:hint="@string/hint2"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:letterSpacing="0.00001"
        android:paddingStart="23dp"
        android:paddingEnd="10dp"
        android:textColorHint="#B2B3B5"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/title_view2"
        android:textColor="#bbbbbc"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/editCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="44dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/desc6"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCantidad"
        app:layout_constraintStart_toStartOf="@+id/txtCantidad"
        app:srcCompat="@drawable/ic_circle_pencil_blue" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="13dp"
        android:layout_height="17dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="342dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/desc3"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:srcCompat="@drawable/ic_bubble_comment_gray" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="18dp"
        android:layout_height="17dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="338dp"
        android:layout_marginBottom="104dp"
        android:contentDescription="@string/desc2"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:srcCompat="@drawable/ic_edit_phone_gray" />

    <ImageButton
        android:id="@+id/editCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="44dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/desc4"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCalendar"
        app:layout_constraintStart_toStartOf="@+id/txtCalendar"
        app:srcCompat="@drawable/ic_circle_pencil_blue" />

    <TextView
        android:id="@+id/txtHour"
        android:layout_width="98dp"
        android:layout_height="72dp"
        android:layout_marginStart="127dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="136dp"
        android:background="@drawable/body_options"
        android:drawablePadding="2dp"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingTop="19dp"
        android:text="@string/hour_box"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        app:drawableTopCompat="@drawable/ic_relojito_reservation_black_2"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toTopOf="@+id/container" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:letterSpacing="0.0001"
        android:text="@string/title_view"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toTopOf="@+id/container"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/textViewPromo"
        android:layout_width="183dp"
        android:layout_height="22dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="258dp"
        android:background="@drawable/desc_container"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0.0001"
        android:paddingTop="2dp"
        android:text="@string/promo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="#D4D5D6"
        android:drawableEnd="@drawable/ic_pencil_black"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/hint1"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:letterSpacing="0.0001"
        android:paddingStart="23dp"
        android:paddingEnd="10dp"
        android:textColorHint="#b2b3b5"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container"
        app:layout_constraintStart_toStartOf="@+id/container" />

    <ImageButton
        android:id="@+id/editHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="44dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/desc5"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtHour"
        app:layout_constraintStart_toStartOf="@+id/txtHour"
        app:srcCompat="@drawable/ic_circle_pencil_blue" />

    <ImageView
        android:id="@+id/blue_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/desc1"
        app:layout_constraintBottom_toTopOf="@+id/titulo"
        app:layout_constraintEnd_toEndOf="@+id/titulo"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/titulo"
        app:srcCompat="@drawable/ic_reservations_blue_round"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/canc_reserva"
        android:layout_width="361dp"
        android:layout_height="55dp"
        android:backgroundTint="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.001"
        android:stateListAnimator="@null"
        android:text="@string/canc_reserva"
        android:textAllCaps="false"
        android:textColor="#bbbbbc"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        app:strokeColor="#D3D3D3"
        app:strokeWidth="1dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/act_reserva"
        android:layout_width="361dp"
        android:layout_height="55dp"
        android:backgroundTint="#165BBB"
        android:fontFamily="@font/open_sans_semibold"
        android:letterSpacing="0.0001"
        android:stateListAnimator="@null"
        android:text="@string/act_reserva"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/canc_reserva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>